--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
             body {
+                background-color: pink;
                 background-size: 1500px;
                 background-image:url(https://c.stocksy.com/a/hlb300/z9/860169.jpg?1574808029)
                 /*background-color:#dd1923;
